--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,7 @@
     outline: none;
     font-weight: normal;
     user-select: none;
+    outline: none !important;
 }
 
 $primarytColor: #c2c2c2;
