--- a/src/Components/GradientButtons/GradientButtons.scss
+++ b/src/Components/GradientButtons/GradientButtons.scss
@@ -3,8 +3,17 @@ $activeBtnBg: #4cc3f1;
 $border: 1px solid rgba(221, 221, 221, 0.1);
 
 .GradientButtons {
+    position: relative;
     display: flex;
     height: 45%;
+    .GradientButtons__radiant-spec {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.7);
+    }
     button {
         position: relative;
         border: none;
@@ -109,8 +118,8 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                 text-align: center;
             }
             input:invalid {
-                border: none;
                 color: deeppink;
+                box-shadow: none;
             }
         }
     }
