--- a/src/Components/GradientSlider/GradientSlider.scss
+++ b/src/Components/GradientSlider/GradientSlider.scss
@@ -4,7 +4,6 @@ $activeBtnBg: #4cc3f1;
     position: relative;
     width: 100%;
     height: 55%;
-    padding: 0 0 0 20px;
     display: flex;
     border-bottom: 1px solid rgba(221, 221, 221, 0.1);
     .GradientSlider__ruler--inactive {
@@ -18,49 +17,68 @@ $activeBtnBg: #4cc3f1;
         } 
     }
     .GradientSlider__ruler {
+        padding: 0 20px;
         position: relative;
         display: flex;
         flex-direction: column;
         width: calc(100% - 50px);
+        .GradientSlider__ruler__percent-indicator {
+            position: absolute;
+            top: 66.6%;
+            height: 33.3%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            background: rgba(0, 0, 0, 0.7);
+            font-size: 10px;
+            border: 1px solid rgba(221, 221, 221, 0.3);
+            border-bottom: none;
+            border-right: none;
+            color: $activeBtnBg;
+            pointer-events: none;
+            z-index: 999;
+        }
         .GradientSlider__helper-lines {
             position: absolute;
             top: 0;
-            left: 0;
-            width: calc(100% - 1px);
+            left: 20px;
+            width: calc(100% - 41px);
             height: 100%;
             margin: 0.5px;
             background: transparent;
-            pointer-events: none;
+            //pointer-events: none;
+            cursor: pointer;
             svg { position: absolute; }
         }
-        .GradientSlider__shadow {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: calc(100% - 1px);
-            height: 100%;
-            background: rgba(0, 0, 0, 0.7);
-            border: none;
-            z-index: 1500;
-            cursor: pointer;
-            & > div {
-                position: absolute;
-                min-width: 50px;
-                height: 18px;
-                top: 1px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 2px 5px;
-                border: 1px dotted #555;
-                border-top: none;
-                border-left: none;
-                background: #111;
-                color: $activeBtnBg;
-                font-size: 12px;
-                pointer-events: none;
-            }
-        }
+        //.GradientSlider__shadow {
+        //    position: absolute;
+        //    top: 0;
+        //    left: 0;
+        //    width: calc(100% - 1px);
+        //    height: 100%;
+        //    background: rgba(0, 0, 0, 0.7);
+        //    border: none;
+        //    z-index: 1500;
+        //    cursor: pointer;
+        //    & > div:first-child {
+        //        position: absolute;
+        //        min-width: 50px;
+        //        height: 18px;
+        //        top: 1px;
+        //        display: flex;
+        //        justify-content: center;
+        //        align-items: center;
+        //        padding: 2px 5px;
+        //        border: 1px dotted #555;
+        //        border-top: none;
+        //        border-left: none;
+        //        background: #111;
+        //        color: $activeBtnBg;
+        //        font-size: 12px;
+        //        pointer-events: none;
+        //    }
+        //}
         .GradientSlider__measure-text-box {
             position: relative;
             height: 33.3%;
@@ -97,6 +115,7 @@ $activeBtnBg: #4cc3f1;
         .GradientSlider__ruler-box {
             height: 33.3%;
             display: flex;
+            pointer-events: none;
         }
         .GradientSlider__thumbs-box {
             position: relative;
@@ -118,10 +137,28 @@ $activeBtnBg: #4cc3f1;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        margin-left: 20px;
         width: 70px;
         height: 100%;
         border-left: 1px solid rgba(221, 221, 221, 0.1);
+        & > div {
+            width: 100%;
+            height: 50%;
+            display: flex;
+            &:first-child {
+                border-bottom: 1px solid rgba(221, 221, 221, 0.1);
+                button {
+                    width: 50%;
+                    font-size: 22px;
+                    &:first-child { border-right: 1px solid rgba(221, 221, 221, 0.1); }
+                    &:hover { font-size: 18px; }
+                }
+            }
+            &:last-child {
+                button {
+                    width: 100%;
+                }
+            }
+        }
         button {
             position: relative;
             height: 100%;
@@ -130,7 +167,6 @@ $activeBtnBg: #4cc3f1;
             color: #ddd;
             font-size: 16px;
             cursor: pointer;
-            &:first-child { border-bottom: 1px solid rgba(221, 221, 221, 0.1); }
             &:hover {
                 background: rgba(255, 255, 255, 0.1);
                 color: $activeBtnBg;
