--- a/src/App.scss
+++ b/src/App.scss
@@ -54,6 +54,15 @@ $primarytColor: #c2c2c2;
         border-radius: 2px;
         cursor: pointer;
     }
+    .fullscreen-box {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: red;
+        z-index: 1001;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
@@ -88,5 +97,4 @@ $primarytColor: #c2c2c2;
     .App .GradientField { 
         height: 180px;
     }
-
 }
