--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -3,7 +3,7 @@ $activeBtnBg: #4cc3f1;
 $border: 1px solid rgba(221, 221, 221, 0.1);
 
 
-.RadiantSettings {
+.RadialSettings {
     position: absolute;
     width: 400px;
     height: 500px;
@@ -35,11 +35,11 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             right: 3px;
             border-radius: 5px;
             border: 1px solid rgba(221, 221, 221, 0.2);
-            .btn--active { background: $activeBtnBg; }
-            .btn--inactive { background: rgba(0, 0, 0, 0.7); }
         }
+        .btn--active { background: $activeBtnBg; }
+        .btn--inactive { background: rgba(0, 0, 0, 0.7); }
     }
-    .RadiantSettings__header {
+    .RadialSettings__header {
         height: 30px;
         display: flex;
         justify-content: space-between;
@@ -56,7 +56,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             color: deeppink;
         }
     }
-    .RadiantSettings__body {
+    .RadialSettings__body {
         height: calc(90% - 30px);
         width: 100%;
         display: flex;
@@ -64,7 +64,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
         justify-content: space-evenly;
         align-items: center;
         border-bottom: 1px solid rgba(221, 221, 221, 0.5);
-        .RadiantSettings__section {
+        .RadialSettings__section {
             width: 100%;
             display: flex;
             &:nth-child(1) { height: 10%; }
@@ -84,7 +84,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             & > div:last-child {
                 width: 80%;
             }
-            .RadiantSettings__shape-btns {
+            .RadialSettings__shape-btns {
                 display: flex;
                 justify-content: space-evenly;
                 align-items: center;
@@ -92,12 +92,12 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                     width: 30%;
                 }
             }
-            .RadiantSettings__size-btns {
+            .RadialSettings__size-btns {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
                 align-items: center;
-                .RadiantSettings__size-btns__named {
+                .RadialSettings__size-btns__named {
                     width: 100%;
                     height: 66%;
                     display: flex;
@@ -114,7 +114,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                         }
                     }
                 }
-                .RadiantSettings__size-btns__length {
+                .RadialSettings__size-btns__length {
                     width: 100%;
                     height: 34%;
                     display: flex;
@@ -138,7 +138,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                     }        
                 }
             }
-            .RadiantSettings__position-btns {
+            .RadialSettings__position-btns {
                 width: 100%;
                 display: flex;
                 flex-direction: column;
@@ -182,7 +182,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             }
         }
     }
-    .RadiantSettings__apply-box {
+    .RadialSettings__apply-box {
         width: 100%;
         height: 10%;
         display: flex;
@@ -195,7 +195,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
 }
 
 @media only screen and (max-width: 500px) {
-    .RadiantSettings {
+    .RadialSettings {
         width: 100%;
         height: 100%;
     }
