--- a/src/Components/RadialSettings/RadialSettings.scss
+++ b/src/Components/RadialSettings/RadialSettings.scss
@@ -18,7 +18,6 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
         background: transparent;
         color: $primarytColor;
         font-size: 16px;
-        border: none;
         border: 1px solid rgba(255, 255, 255, 0.1);
         border-radius: 2px;
         cursor: pointer;
@@ -68,8 +67,8 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
             width: 100%;
             display: flex;
             &:nth-child(1) { height: 10%; }
-            &:nth-child(2) { height: 40%; }
-            &:nth-child(3) { height: 50%; }
+            &:nth-child(2) { height: 30%; }
+            &:nth-child(3) { height: 60%; }
             &:not(:last-child) {
                 border-bottom: 1px solid rgba(221, 221, 221, 0.5);
             }
@@ -119,23 +118,7 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                     height: 34%;
                     display: flex;
                     justify-content: space-evenly;
-                    align-items: center;
-                    input {
-                        margin: 0 15px;
-                        height: 50%;
-                        max-width: 40px;
-                        background: #131313;
-                        font-size: 14px;
-                        border: 1px solid rgba(221, 221, 221, 0.1);
-                        border-bottom: $border;
-                        border-top: $border;
-                        color: #ddd;
-                        text-align: center;
-                    }
-                    input:invalid {
-                        color: deeppink;
-                        box-shadow: none;
-                    }        
+                    align-items: center;        
                 }
             }
             .RadialSettings__position-btns {
@@ -144,9 +127,9 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                 flex-direction: column;
                 justify-content: space-evenly;
                 align-items: center;
-                & > div {
+                & > div:first-child, & > div:nth-child(2) {
                     width: 100%;
-                    height: 50%;
+                    height: 40%;
                     padding: 5px;
                     &:first-child { border-bottom: 1px solid rgba(255, 255, 255, 0.5); }
                     & > div {
@@ -164,7 +147,6 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                             }
                         }
                         &:nth-child(2) {
-                            //background: blue;
                             justify-content: space-between;
                             button {
                                 width: 30%;
@@ -178,6 +160,14 @@ $border: 1px solid rgba(221, 221, 221, 0.1);
                         }
 
                     }
+                }
+                & > div:last-child {
+                    border-top: 1px solid rgba(255, 255, 255, 0.5);
+                    display: flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    width: 100%;
+                    height: 20%;
                 }
             }
         }
